--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "~2.5.2",
     "express": "~4.14.0",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "watson-developer-cloud": "^2.15.2"
   }
 }
