--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.14.0",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0",
+    "socket.io": "^1.7.2",
     "watson-developer-cloud": "^2.15.2"
   }
 }
